# CursoVideojuegos

./: .gitignore  LICENSE  README.md
lecc1/: README.md
lecc1/src/: config.h  main.cpp
lecc2/: README.md
lecc2/src/: CMakeLists.txt  main.cpp
lecc2/src/cmake_modules/: FindSFML.cmake
lecc3/: README.md
lecc3/res/: spaceInvaders.png.full
lecc3/src/: CMakeLists.txt  config.h.in  main.cpp
